# fastapi-Y7Ls

./: README.md  main.py  pyproject.toml  railway.json  requirements.txt  test-creds.json
src/stl_builder/: main.py  model.py  router.py  service.py  settings.py
src/stl_builder/services/: service.py
src/stl_builder/services/shapes/: simple_box.py  simple_box_with_lid.py
